--- a/src/MSBuild/Core/Core/ref/GitVersionCache/GitVersionCache.MSBuild.Core.csproj
+++ b/src/MSBuild/Core/Core/ref/GitVersionCache/GitVersionCache.MSBuild.Core.csproj
@@ -8,6 +8,7 @@
     <DisableGitVersion>true</DisableGitVersion>
     <DisableGitVersionCache>true</DisableGitVersionCache>
     <DisableSdkProps>true</DisableSdkProps>
+    <IsPackable>true</IsPackable>
 
   </PropertyGroup>
 
