--- a/src/MSBuild/Core/Core/ref/PackagePublish/PackagePublish.MSBuild.Core.csproj
+++ b/src/MSBuild/Core/Core/ref/PackagePublish/PackagePublish.MSBuild.Core.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\src\build\Teronis.MSBuild.Packaging.GenerateFilesystemPackageInProject.props" />
   
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <!--<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>-->
+    <!--<TargetFrameworks>netcoreapp2.1;net472</TargetFrameworks>-->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <GenerateFilesystemPackageProjects Include="..\src\*.csproj" />
+    <GenerateFilesystemPackageProjects Include="..\GitVersionCache\*.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
