--- a/src/MSBuild/Core/Core/src/Teronis.MSBuild.Core.csproj
+++ b/src/MSBuild/Core/Core/src/Teronis.MSBuild.Core.csproj
@@ -5,7 +5,9 @@
 
   <PropertyGroup>
 
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <!--<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>-->
+    <!--<TargetFrameworks>netcoreapp2.1;net472</TargetFrameworks>-->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
@@ -26,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="16.6.0" />
     <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.6.0" PrivateAssets="all" />
   </ItemGroup>
 
